--- a/app/templates/analysis/fundamental.html
+++ b/app/templates/analysis/fundamental.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% include 'analysis/_menu.html' %}
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
