--- a/app/templates/analysis/technical.html
+++ b/app/templates/analysis/technical.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="/static/css/bg-dark-green.css">
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <!-- Analysis Menu -->
     {% include 'analysis/_menu.html' %}
     
