--- a/app/templates/advanced_analytics.html
+++ b/app/templates/advanced_analytics.html
@@ -3,7 +3,7 @@
 {% block title %}Avanserte Analyser - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <h1 class="mb-4">Avanserte Analyser</h1>
