--- a/app/templates/analysis/advanced.html
+++ b/app/templates/analysis/advanced.html
@@ -3,7 +3,7 @@
 {% block title %}Avansert Analyse - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     {% include 'analysis/_menu.html' %}
     
     <div class="row">
