--- a/app/templates/analysis/short-analysis.html
+++ b/app/templates/analysis/short-analysis.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %}Shortanalyse - Aksjeradar{% endblock %}
+
+{% block content %}
+<div class="container py-4">ends "base.html" %}
+
 {% block title %}Short Analyse | Aksjeradar{% endblock %}
 
 {% block content %}
