--- a/app/templates/analysis/short.html
+++ b/app/templates/analysis/short.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Short Analyse - {{ ticker|default('') }} | Aksjeradar{% endblock %}
+{% block title %}Short Positioner - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-md-9">
             <div class="card shadow-sm mb-4">
