--- a/app/templates/backtest/strategy_builder.html
+++ b/app/templates/backtest/strategy_builder.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block title %}Strategibygger - Aksjeradar{% endblock %}
+
+{% block content %}
+<div class="container py-4">ends "base.html" %}
+
 {% block title %}Strategibygger - Backtest | Aksjeradar{% endblock %}
 
 {% block content %}
