--- a/app/templates/stocks/detail.html
+++ b/app/templates/stocks/detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ ticker }} - Aksjedetaljer - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Header with live indicator -->
     <div class="row mb-4">
         <div class="col-12">
