--- a/app/templates/stocks/details_enhanced.html
+++ b/app/templates/stocks/details_enhanced.html
@@ -2,7 +2,7 @@
 {% block title %}{{ stock_info.get('longName', ticker) }} - Aksjedetaljer{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Breadcrumb Navigation -->
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
