--- a/app/templates/stocks/global_dedicated.html
+++ b/app/templates/stocks/global_dedicated.html
@@ -5,7 +5,7 @@
 {% block keywords %}globale aksjer, AAPL, MSFT, TSLA, NVDA, amerikanske aksjer, internasjonale markeder, NASDAQ, NYSE, S&P 500{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Breadcrumb Navigation -->
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
