--- a/app/templates/stocks/main_overview.html
+++ b/app/templates/stocks/main_overview.html
@@ -5,7 +5,7 @@
 {% block keywords %}Oslo Børs, norske aksjer, EQNR, DNB, TEL, amerikanske aksjer, AAPL, MSFT, GOOGL, globale aksjer, aksjekurser sanntid{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Page Header -->
     <div class="row mb-4">
         <div class="col-12">
