--- a/app/templates/stocks/oslo_dedicated.html
+++ b/app/templates/stocks/oslo_dedicated.html
@@ -5,7 +5,7 @@
 {% block keywords %}Oslo Børs, norske aksjer, EQNR, DNB, TEL, MOWI, NEL, aksjekurser Norge, børs Oslo, norske selskaper{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Breadcrumb Navigation -->
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
