--- a/app/templates/analysis/earnings_calendar.html
+++ b/app/templates/analysis/earnings_calendar.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Resultatkalender - Aksjeradar{% endblock %}
+
+{% block content %}
+{% include 'analysis/_menu.html' %}
+
+<div class="container py-4">ds "base.html" %}
+
 {% block title %}Resultatkalender | Aksjeradar{% endblock %}
 
 {% block content %}
