--- a/app/templates/analysis/insider_trading.html
+++ b/app/templates/analysis/insider_trading.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% include 'analysis/_menu.html' %}
 
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
