--- a/app/templates/analysis/market_overview.html
+++ b/app/templates/analysis/market_overview.html
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4 market-overview-page">
+<div class="container mt-4 market-overview-page">
     {% include 'analysis/_menu.html' %}
     
     <div class="row">
