--- a/app/templates/analysis/peer_comparison.html
+++ b/app/templates/analysis/peer_comparison.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Sammenligning - Aksjeradar{% endblock %}
+
+{% block content %}
+{% include 'analysis/_menu.html' %}
+
+<div class="container py-4">ds "base.html" %}
+
 {% block title %}Peer-sammenligning | Aksjeradar{% endblock %}
 
 {% block content %}
