--- a/app/templates/analysis/screener.html
+++ b/app/templates/analysis/screener.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% include 'analysis/_menu.html' %}
 
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <!-- Screener Loading Spinner -->
         <div id="screener-loading" class="text-center py-3" style="display:none;">
