--- a/app/templates/analysis/screener_view.html
+++ b/app/templates/analysis/screener_view.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block title %}Screener - Aksjeradar{% endblock %}
+
+{% block content %}
+{% include 'analysis/_menu.html' %}
+
+<div class="container py-4">ds "base.html" %}
+
 {% block title %}Aksje Screener Resultater | Aksjeradar{% endblock %}
 
 {% block content %}
