--- a/app/templates/analysis/tradingview.html
+++ b/app/templates/analysis/tradingview.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     {% include 'analysis/_menu.html' %}
     
     <div class="row">
