--- a/app/templates/backtest/index.html
+++ b/app/templates/backtest/index.html
@@ -3,7 +3,7 @@
 {% block title %}Backtest & Strategibygger - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -1080,7 +1080,7 @@ function applyOptimalParameters() {
         <i class="bi bi-check-circle"></i> Optimale parametere er satt! Kjør backtest for å se resultatene.
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     `;
-    document.querySelector('.container-fluid').insertBefore(alert, document.querySelector('.container-fluid').firstChild);
+    document.querySelector('.container').insertBefore(alert, document.querySelector('.container').firstChild);
     
     setTimeout(() => alert.remove(), 4000);
 }
