--- a/app/templates/market_intel/sector_analysis.html
+++ b/app/templates/market_intel/sector_analysis.html
@@ -129,7 +129,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
