--- a/app/templates/stocks/details.html
+++ b/app/templates/stocks/details.html
@@ -3,7 +3,7 @@
 {% block title %}{{ stock.symbol }} - {{ stock.name }} | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-lg-8">
             <!-- Stock Header -->
