--- a/app/templates/stocks/oslo_simple.html
+++ b/app/templates/stocks/oslo_simple.html
@@ -3,7 +3,7 @@
 {% block title %}Oslo Børs - Norske Aksjer | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Page Header -->
     <div class="row mb-4">
         <div class="col-12">
