--- a/app/templates/analysis/short-analysis.html
+++ b/app/templates/analysis/short-analysis.html
@@ -3,12 +3,7 @@
 {% block title %}Shortanalyse - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container py-4">ends "base.html" %}
-
-{% block title %}Short Analyse | Aksjeradar{% endblock %}
-
-{% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     {% include 'analysis/_menu.html' %}
     
     <div class="row">
